# halo2-solidity-verifier

./: .gitignore  Cargo.toml  README.md  askama.toml  test.sol  test.yul
.github/workflows/: ci.yml  tests.yml
contracts/: VerifierBase.sol
examples/: separately.rs
src/: codegen.rs  evm.rs  lib.rs  test.rs  transcript.rs  utils.rs
src/codegen/: evaluator.rs  expression.rs  pcs.rs  template.rs  util.rs
src/codegen/pcs/: bdfg21.rs  gwc19.rs
templates/: Halo2Verifier.sol  Halo2VerifyingKey.sol
tests/: test_verifier.rs
